# llmcpp

./: .gitignore  CMakeLists.txt  pyproject.toml  train_gpt2.py
app/: llm.cpp
cmake/: os_opts.cmake
llmcpp/: download_weights.py
src/: gpt2.h  libraries.h  utils.h
src/gpt2/: gpt2_model.h  gpt2_model_config.h  gpt2_tensor_activations.h  gpt2_tensor_weights.h  gpt2_tensors.h  gpt2_tokenizer.h  gpt2_train_config.h
src/gpt2/gpt2_tokenizer/: ctre.hpp
src/utils/: blas.h  llm_op.h  llm_tensor.h  tensors.h
src/utils/blas/: gemm.h
src/utils/llm_op/: attention.h  encoder.h  matmul.h
src/utils/tensors/: base_tensor.h  dense_tensor.h  shallow_tensor.h
