[tool.poetry]
name = "llmcpp"
version = "0.1.0"
description = ""
authors = ["Peter Staar <taa@zurich.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.0"
transformers = "^4.41.1"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
